# hw3-halamall10

./: .gitignore  Makefile  README.md  ai_documentation.txt  index.md  myst.yml  pyproject.toml
.github/workflows/: myst-pages.yml
ligotools/: __init__.py  utils.py
ligotools.egg-info/: PKG-INFO
ligotools/tests/: test_readligo.py  test_utils.py
